--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -244,6 +244,72 @@ $aligns: center;
     text-align: $align;
   }
 }
-.clip-path-circle{
+.clip-path-circle {
   clip-path: circle(50% at 50% 50%);
 }
+.object-fit-cover {
+  object-fit: cover;
+}
+.d-flex {
+  display: flex;
+}
+.rounded {
+  border-radius: 2px;
+}
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+// X-Small devices (portrait phones, less than 576px)
+// No media query for `xs` since this is the default in Bootstrap
+
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) {
+}
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) {
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {
+  .cover-anime {
+    max-width: 250px;
+    max-height: 200px;
+  }
+}
+
+// X-Large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {
+}
+
+// XX-Large devices (larger desktops, 1400px and up)
+@media (min-width: 1400px) {
+}
+
+// X-Small devices (portrait phones, less than 576px)
+@media (max-width: 575.98px) {
+  .cover-anime {
+    max-width: 250px;
+    max-height: 200px;
+  }
+}
+
+// Small devices (landscape phones, less than 768px)
+@media (max-width: 767.98px) {
+}
+
+// Medium devices (tablets, less than 992px)
+@media (max-width: 991.98px) {
+}
+
+// Large devices (desktops, less than 1200px)
+@media (max-width: 1199.98px) {
+}
+
+// X-Large devices (large desktops, less than 1400px)
+@media (max-width: 1399.98px) {
+}
+
+// XX-Large devices (larger desktops)
+// No media query since the xxl breakpoint has no upper bound on its width
